Fix icon alignment for menu item

--- a/src/dashboard/src/scss/_sidebar-menu.scss
+++ b/src/dashboard/src/scss/_sidebar-menu.scss
@@ -26,15 +26,11 @@
         }
 
         mat-icon {
-            // margin-right: 10px;
-            // font-size: 12px;
-            // text-align: center;
-            // flex-shrink: 0;
-
-            font-size: 24px;
+            font-size: 1.5em;
             margin-right: 15px;
             line-height: 30px;
             text-align: center;
+            height: auto;
 
             &.icon-bullet {
                 font-size: 12px;
@@ -50,7 +46,7 @@
 
             margin: 0;
             line-height: 30px;
-            font-size: 14px;
+            font-size: 1em;
             position: relative;
             display: block;
             height: auto;
